[package]
name = "kychacha_crypto"
description = "A Post-Quantum Secure Encryption Protocol using chacha20poly1305 and CRYSTALS-kyber"
version = "6.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Nichokas/kychacha_crypto"
readme = "README.md"
build = "build.rs"

exclude = [
    ".cargo_vcs_info.json",
    ".github/dependabot.yml",
    ".github/workflows/auto-merge.yaml",
    ".github/workflows/codspeed.yaml",
    ".github/workflows/rustsec.yaml",
    ".idea/.gitignore",
    "example/",
]

[features]
default = ["mlkem768","recommended-buffer"]
mlkem512 = []
mlkem768 = []
mlkem1024 = []
small-buffer = []
recommended-buffer = []
large-buffer = []
medium-buffer = []

[dependencies]
anyhow = "1.0.99"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
hkdf = "0.12.4"
serde = { version = "1.0.226", features = ["derive"] }
sha2 = "0.10.9"
bincode = { version = "2.0.1", features = ["serde"] }
serde_bytes = "0.11.17"
oqs = { version = "0.11.0", default-features = false, features = ["ml_kem","serde"] }
getrandom = "0.3.3"

[dev-dependencies]
tempfile = "3.21.0"
criterion = { version = "3.0.3", package = "codspeed-criterion-compat" }


[[bench]]
name = "kyber_bench"
harness = false

[[bench]]
name = "chacha_bench"
harness = false
